--- a/source/_posts/第一篇文章.md
+++ b/source/_posts/第一篇文章.md
@@ -15,4 +15,4 @@ tags:
 - 列點二
 
 [我是連結](https://courses.hexschool.com/courses/) [連結名稱] + (url)
-![我是圖片](/images/poke.jpg) ![連結名稱] + (url)
+![我是圖片](images/poke.jpg) ![連結名稱] + (url)
